--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^5.1.1",
+    "openai": "^4.10.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.5",
@@ -81,6 +83,7 @@
     "jest": "^29.7.0",
     "js-yaml": "^4.1.0",
     "make-coverage-badge": "^1.2.0",
+    "nock": "^13.3.3",
     "prettier": "^3.0.3",
     "prettier-eslint": "^15.0.1",
     "ts-jest": "^29.1.1",
