--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,40 +1,40 @@
 ## TODO: When changing the repository's visibility to 'public',
 ##  remove CodeQL comments and ensure that the CI/CD pipeline functions correctly
 ##
-##name: CodeQL
-##
-##on:
-##  push:
-##    branches:
-##      - main
-##  pull_request:
-##    branches:
-##      - main
-##  schedule:
-##    - cron: '31 7 * * 3'
-##
-##jobs:
-##  analyze:
-##    name: Analyze
-##    runs-on: ubuntu-latest
-##
-##    permissions:
-##      actions: read
-##      checks: write
-##      contents: read
-##      security-events: write
-##
-##    strategy:
-##      fail-fast: false
-##      matrix:
-##        language:
-##          - TypeScript
-##
-##    steps:
-##      - name: Checkout
-##        id: checkout
-##        uses: actions/checkout@v4
-##
+name: CodeQL
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+  schedule:
+    - cron: '31 7 * * 3'
+
+jobs:
+  analyze:
+    name: Analyze
+    runs-on: ubuntu-latest
+
+    permissions:
+      actions: read
+      checks: write
+      contents: read
+      security-events: write
+
+    strategy:
+      fail-fast: false
+      matrix:
+        language:
+          - TypeScript
+
+    steps:
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v4
+
 ##      - name: Initialize CodeQL
 ##        id: initialize
 ##        uses: github/codeql-action/init@v2
