--- a/.github/workflows/code-butler.yml
+++ b/.github/workflows/code-butler.yml
@@ -13,7 +13,7 @@ jobs:
     if: startsWith(github.event.comment.body, '/review')
     runs-on: ubuntu-latest
     steps:
-      - uses: ca-dp/code-butler@latest
+      - uses: ca-dp/code-butler@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
