--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^5.1.1",
-    "openai": "^4.10.0",
-    "tiktoken": "^1.0.10"
+    "js-tiktoken": "^1.0.7",
+    "openai": "^4.10.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.5",
