--- a/.github/linters/gitleaks.toml
+++ b/.github/linters/gitleaks.toml
@@ -7,5 +7,5 @@ paths = [
     '''node_modules''',
     '''package-lock.json''',
     '''package.json''',
-    '''dist''',
+    '''dist/index.js''',
 ]
