fix action name

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'CodeButler'
+name: 'butler'
 description: 'GitHub Action for performing code reviews using the OpenAI API.'
 author: 'ouchi2501'
 
