--- a/.github/workflows/code-butler.yml
+++ b/.github/workflows/code-butler.yml
@@ -18,7 +18,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           cmd: review
-          model: gpt-4-1106-preview
+#          model: gpt-4-1106-preview
   chat:
     if: startsWith(github.event.comment.body, '/chat')
     runs-on: ubuntu-latest
