--- a/.github/workflows/code-butler.yml
+++ b/.github/workflows/code-butler.yml
@@ -13,17 +13,17 @@ jobs:
     if: startsWith(github.event.comment.body, '/review')
     runs-on: ubuntu-latest
     steps:
-      - uses: ca-dp/code-butler@v1.0.9
+      - uses: ca-dp/code-butler@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           cmd: review
-#          model: gpt-4-1106-preview
+          model: gpt-4-1106-preview
   chat:
     if: startsWith(github.event.comment.body, '/chat')
     runs-on: ubuntu-latest
     steps:
-      - uses: ca-dp/code-butler@v1.0.9
+      - uses: ca-dp/code-butler@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
